Compilers/Assign4_19CS10067 (1)/Assign4_19CS10067/y.output
Terminals unused in grammar

    STRUCT
    TYPEDEF
    UNION
    HASH


State 322 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 CONSTANT: INT_CONSTANT
    2         | FLOAT_CONSTANT
    3         | CHAR_CONSTANT

    4 primary_expression: IDENTIFIER
    5                   | CONSTANT
    6                   | STRING_LITERAL
    7                   | OPENROUNDB expression CLOSEROUNDB

    8 postfix_expression: primary_expression
    9                   | postfix_expression OPENSQUAREB expression CLOSESQUAREB
   10                   | postfix_expression OPENROUNDB CLOSEROUNDB
   11                   | postfix_expression OPENROUNDB argument_expression_list CLOSEROUNDB
   12                   | postfix_expression DOT IDENTIFIER
   13                   | postfix_expression ARROW IDENTIFIER
   14                   | postfix_expression INCREMENT
   15                   | postfix_expression DECREMENT
   16                   | OPENROUNDB type_name CLOSEROUNDB OPENCURLYB initializer_list CLOSECURLYB
   17                   | OPENROUNDB type_name CLOSEROUNDB OPENCURLYB initializer_list COMMA CLOSECURLYB

   18 argument_expression_list: assignment_expression
   19                         | argument_expression_list COMMA assignment_expression

   20 unary_expression: postfix_expression
   21                 | INCREMENT unary_expression
   22                 | DECREMENT unary_expression
   23                 | unary_operator cast_expression
   24                 | SIZEOF unary_expression
   25                 | SIZEOF OPENROUNDB type_name CLOSEROUNDB

   26 unary_operator: BITWISEAND
   27               | STAR
   28               | PLUS
   29               | MINUS
   30               | NOT
   31               | EXCLAMATION

   32 cast_expression: unary_expression
   33                | OPENROUNDB type_name CLOSEROUNDB cast_expression

   34 multiplicative_expression: cast_expression
   35                          | multiplicative_expression STAR cast_expression
   36                          | multiplicative_expression DIVIDE cast_expression
   37                          | multiplicative_expression PERCENTAGE cast_expression

   38 additive_expression: multiplicative_expression
   39                    | additive_expression PLUS multiplicative_expression
   40                    | additive_expression MINUS multiplicative_expression

   41 shift_expression: additive_expression
   42                 | shift_expression LEFTSHIFT additive_expression
   43                 | shift_expression RIGHTSHIFT additive_expression

   44 relational_expression: shift_expression
   45                      | relational_expression LESSEQUAL shift_expression
   46                      | relational_expression GREATEREQUAL shift_expression
   47                      | relational_expression LESSTHAN shift_expression
   48                      | relational_expression GREATERTHAN shift_expression

   49 equality_expression: relational_expression
   50                    | equality_expression EQUAL relational_expression
   51                    | equality_expression NOTEQUAL relational_expression

   52 and_expression: equality_expression
   53               | and_expression BITWISEAND equality_expression

   54 exclusive_or_expression: and_expression
   55                        | exclusive_or_expression XOR and_expression

   56 inclusive_or_expression: exclusive_or_expression
   57                        | inclusive_or_expression BITWISEOR exclusive_or_expression

   58 logical_and_expression: inclusive_or_expression
   59                       | logical_and_expression AND inclusive_or_expression

   60 logical_or_expression: logical_and_expression
   61                      | logical_or_expression OR logical_and_expression

   62 conditional_expression: logical_or_expression
   63                       | logical_or_expression QUESTIONMARK expression COLON conditional_expression

   64 assignment_expression: conditional_expression
   65                      | unary_expression assignment_operator assignment_expression

   66 assignment_operator: ASSIGN
   67                    | MULTIPLYASSIGN
   68                    | DIVIDEASSIGN
   69                    | MODULOASSIGN
   70                    | PLUSASSIGN
   71                    | MINUSASSIGN
   72                    | SHIFTLEFTASSIGN
   73                    | SHIFTRIGHTASSIGN
   74                    | ANDASSIGN
   75                    | XORASSIGN
   76                    | ORASSIGN

   77 expression: assignment_expression
   78           | expression COMMA assignment_expression

   79 constant_expression: conditional_expression

   80 declaration: declaration_specifiers SEMICOLON
   81            | declaration_specifiers init_declarator_list SEMICOLON

   82 declaration_specifiers: storage_class_specifier
   83                       | storage_class_specifier declaration_specifiers
   84                       | type_specifier
   85                       | type_specifier declaration_specifiers
   86                       | type_qualifier
   87                       | type_qualifier declaration_specifiers
   88                       | function_specifier
   89                       | function_specifier declaration_specifiers

   90 init_declarator_list: init_declarator
   91                     | init_declarator_list COMMA init_declarator

   92 init_declarator: declarator
   93                | declarator ASSIGN initializer

   94 storage_class_specifier: EXTERN
   95                        | STATIC
   96                        | AUTO
   97                        | REGISTER

   98 type_specifier: VOID
   99               | CHAR
  100               | SHORT
  101               | INT
  102               | LONG
  103               | FLOAT
  104               | DOUBLE
  105               | SIGNED
  106               | UNSIGNED
  107               | BOOL
  108               | COMPLEX
  109               | IMAGINARY
  110               | enum_specifier

  111 specifier_qualifier_list: type_specifier specifier_qualifier_list
  112                         | type_specifier
  113                         | type_qualifier specifier_qualifier_list
  114                         | type_qualifier

  115 enum_specifier: ENUM OPENCURLYB enumerator_list CLOSECURLYB
  116               | ENUM IDENTIFIER OPENCURLYB enumerator_list CLOSECURLYB
  117               | ENUM OPENCURLYB enumerator_list COMMA CLOSECURLYB
  118               | ENUM IDENTIFIER OPENCURLYB enumerator_list COMMA CLOSECURLYB
  119               | ENUM IDENTIFIER

  120 enumerator_list: enumerator
  121                | enumerator_list COMMA enumerator

  122 enumerator: IDENTIFIER
  123           | IDENTIFIER ASSIGN constant_expression

  124 type_qualifier: CONST
  125               | VOLATILE
  126               | RESTRICT

  127 function_specifier: INLINE

  128 declarator: pointer direct_declarator
  129           | direct_declarator

  130 direct_declarator: IDENTIFIER
  131                  | OPENROUNDB declarator CLOSEROUNDB
  132                  | direct_declarator OPENSQUAREB type_qualifier_list_opt assignment_expression_opt CLOSESQUAREB
  133                  | direct_declarator OPENSQUAREB STATIC type_qualifier_list_opt assignment_expression CLOSESQUAREB
  134                  | direct_declarator OPENSQUAREB type_qualifier_list_opt STAR CLOSESQUAREB
  135                  | direct_declarator OPENROUNDB parameter_type_list CLOSEROUNDB
  136                  | direct_declarator OPENROUNDB identifier_list_opt CLOSEROUNDB
  137                  | direct_declarator OPENSQUAREB type_qualifier_list STATIC assignment_expression CLOSESQUAREB

  138 identifier_list_opt: %empty
  139                    | identifier_list

  140 type_qualifier_list_opt: %empty
  141                        | type_qualifier_list

  142 assignment_expression_opt: %empty
  143                          | assignment_expression

  144 pointer: STAR type_qualifier_list_opt
  145        | STAR type_qualifier_list_opt pointer

  146 type_qualifier_list: type_qualifier
  147                    | type_qualifier_list type_qualifier

  148 parameter_type_list: parameter_list
  149                    | parameter_list COMMA ELLIPSIS

  150 parameter_list: parameter_declaration
  151               | parameter_list COMMA parameter_declaration

  152 parameter_declaration: declaration_specifiers declarator
  153                      | declaration_specifiers

  154 identifier_list: IDENTIFIER
  155                | identifier_list COMMA IDENTIFIER

  156 type_name: specifier_qualifier_list

  157 initializer: assignment_expression
  158            | OPENCURLYB initializer_list CLOSECURLYB
  159            | OPENCURLYB initializer_list COMMA CLOSECURLYB

  160 initializer_list: designation_opt initializer
  161                 | initializer_list COMMA designation_opt initializer

  162 designation_opt: %empty
  163                | designation

  164 designation: designator_list ASSIGN

  165 designator_list: designator
  166                | designator_list designator

  167 designator: OPENSQUAREB constant_expression CLOSESQUAREB
  168           | DOT IDENTIFIER

  169 statement: labeled_statement
  170          | compound_statement
  171          | expression_statement
  172          | selection_statement
  173          | iteration_statement
  174          | jump_statement

  175 labeled_statement: IDENTIFIER COLON statement
  176                  | CASE constant_expression COLON statement
  177                  | DEFAULT COLON statement

  178 compound_statement: OPENCURLYB CLOSECURLYB
  179                   | OPENCURLYB block_item_list CLOSECURLYB

  180 block_item_list: block_item
  181                | block_item_list block_item

  182 block_item: declaration
  183           | statement

  184 expression_statement: SEMICOLON
  185                     | expression SEMICOLON

  186 selection_statement: IF OPENROUNDB expression CLOSEROUNDB statement
  187                    | IF OPENROUNDB expression CLOSEROUNDB statement ELSE statement
  188                    | SWITCH OPENROUNDB expression CLOSEROUNDB statement

  189 iteration_statement: WHILE OPENROUNDB expression CLOSEROUNDB statement
  190                    | DO statement WHILE OPENROUNDB expression CLOSEROUNDB SEMICOLON
  191                    | FOR OPENROUNDB expression_opt SEMICOLON expression_opt SEMICOLON expression_opt CLOSEROUNDB statement
  192                    | FOR OPENROUNDB declaration expression_opt SEMICOLON expression_opt CLOSEROUNDB statement

  193 expression_opt: %empty
  194               | expression

  195 jump_statement: GOTO IDENTIFIER SEMICOLON
  196               | CONTINUE SEMICOLON
  197               | BREAK SEMICOLON
  198               | RETURN SEMICOLON
  199               | RETURN expression SEMICOLON

  200 translation_unit: external_declaration
  201                 | translation_unit external_declaration

  202 external_declaration: function_definition
  203                     | declaration

  204 function_definition: declaration_specifiers declarator declaration_list compound_statement
  205                    | declaration_specifiers declarator compound_statement

  206 declaration_list: declaration
  207                 | declaration_list declaration


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    AUTO (258) 96
    BREAK (259) 197
    CASE (260) 176
    CHAR (261) 99
    CONST (262) 124
    CONTINUE (263) 196
    DEFAULT (264) 177
    DO (265) 190
    DOUBLE (266) 104
    ELSE (267) 187
    ENUM (268) 115 116 117 118 119
    EXTERN (269) 94
    REGISTER (270) 97
    FLOAT (271) 103
    FOR (272) 191 192
    GOTO (273) 195
    IF (274) 186 187
    INLINE (275) 127
    INT (276) 101
    LONG (277) 102
    RESTRICT (278) 126
    RETURN (279) 198 199
    SHORT (280) 100
    SIGNED (281) 105
    SIZEOF (282) 24 25
    STATIC (283) 95 133 137
    STRUCT (284)
    SWITCH (285) 188
    TYPEDEF (286)
    UNION (287)
    UNSIGNED (288) 106
    VOID (289) 98
    VOLATILE (290) 125
    WHILE (291) 189 190
    BOOL (292) 107
    COMPLEX (293) 108
    IMAGINARY (294) 109
    OPENSQUAREB (295) 9 132 133 134 137 167
    CLOSESQUAREB (296) 9 132 133 134 137 167
    OPENROUNDB (297) 7 10 11 16 17 25 33 131 135 136 186 187 188 189 190 191 192
    CLOSEROUNDB (298) 7 10 11 16 17 25 33 131 135 136 186 187 188 189 190 191 192
    OPENCURLYB (299) 16 17 115 116 117 118 158 159 178 179
    CLOSECURLYB (300) 16 17 115 116 117 118 158 159 178 179
    DOT (301) 12 168
    ARROW (302) 13
    INCREMENT (303) 14 21
    DECREMENT (304) 15 22
    BITWISEAND (305) 26 53
    STAR (306) 27 35 134 144 145
    PLUS (307) 28 39
    MINUS (308) 29 40
    NOT (309) 30
    EXCLAMATION (310) 31
    DIVIDE (311) 36
    PERCENTAGE (312) 37
    LEFTSHIFT (313) 42
    RIGHTSHIFT (314) 43
    LESSTHAN (315) 47
    GREATERTHAN (316) 48
    LESSEQUAL (317) 45
    GREATEREQUAL (318) 46
    EQUAL (319) 50
    NOTEQUAL (320) 51
    XOR (321) 55
    BITWISEOR (322) 57
    AND (323) 59
    OR (324) 61
    QUESTIONMARK (325) 63
    COLON (326) 63 175 176 177
    SEMICOLON (327) 80 81 184 185 190 191 192 195 196 197 198 199
    ELLIPSIS (328) 149
    ASSIGN (329) 66 93 123 164
    MULTIPLYASSIGN (330) 67
    DIVIDEASSIGN (331) 68
    MODULOASSIGN (332) 69
    PLUSASSIGN (333) 70
    MINUSASSIGN (334) 71
    SHIFTLEFTASSIGN (335) 72
    SHIFTRIGHTASSIGN (336) 73
    ANDASSIGN (337) 74
    XORASSIGN (338) 75
    ORASSIGN (339) 76
    COMMA (340) 17 19 78 91 117 118 121 149 151 155 159 161
    HASH (341)
    IDENTIFIER (342) 4 12 13 116 118 119 122 123 130 154 155 168 175 195
    INT_CONSTANT (343) 1
    FLOAT_CONSTANT (344) 2
    CHAR_CONSTANT (345) 3
    STRING_LITERAL (346) 6


Nonterminals, with rules where they appear

    $accept (92)
        on left: 0
    CONSTANT (93)
        on left: 1 2 3
        on right: 5
    primary_expression (94)
        on left: 4 5 6 7
        on right: 8
    postfix_expression (95)
        on left: 8 9 10 11 12 13 14 15 16 17
        on right: 9 10 11 12 13 14 15 20
    argument_expression_list (96)
        on left: 18 19
        on right: 11 19
    unary_expression (97)
        on left: 20 21 22 23 24 25
        on right: 21 22 24 32 65
    unary_operator (98)
        on left: 26 27 28 29 30 31
        on right: 23
    cast_expression (99)
        on left: 32 33
        on right: 23 33 34 35 36 37
    multiplicative_expression (100)
        on left: 34 35 36 37
        on right: 35 36 37 38 39 40
    additive_expression (101)
        on left: 38 39 40
        on right: 39 40 41 42 43
    shift_expression (102)
        on left: 41 42 43
        on right: 42 43 44 45 46 47 48
    relational_expression (103)
        on left: 44 45 46 47 48
        on right: 45 46 47 48 49 50 51
    equality_expression (104)
        on left: 49 50 51
        on right: 50 51 52 53
    and_expression (105)
        on left: 52 53
        on right: 53 54 55
    exclusive_or_expression (106)
        on left: 54 55
        on right: 55 56 57
    inclusive_or_expression (107)
        on left: 56 57
        on right: 57 58 59
    logical_and_expression (108)
        on left: 58 59
        on right: 59 60 61
    logical_or_expression (109)
        on left: 60 61
        on right: 61 62 63
    conditional_expression (110)
        on left: 62 63
        on right: 63 64 79
    assignment_expression (111)
        on left: 64 65
        on right: 18 19 65 77 78 133 137 143 157
    assignment_operator (112)
        on left: 66 67 68 69 70 71 72 73 74 75 76
        on right: 65
    expression (113)
        on left: 77 78
        on right: 7 9 63 78 185 186 187 188 189 190 194 199
    constant_expression (114)
        on left: 79
        on right: 123 167 176
    declaration (115)
        on left: 80 81
        on right: 182 192 203 206 207
    declaration_specifiers (116)
        on left: 82 83 84 85 86 87 88 89
        on right: 80 81 83 85 87 89 152 153 204 205
    init_declarator_list (117)
        on left: 90 91
        on right: 81 91
    init_declarator (118)
        on left: 92 93
        on right: 90 91
    storage_class_specifier (119)
        on left: 94 95 96 97
        on right: 82 83
    type_specifier (120)
        on left: 98 99 100 101 102 103 104 105 106 107 108 109 110
        on right: 84 85 111 112
    specifier_qualifier_list (121)
        on left: 111 112 113 114
        on right: 111 113 156
    enum_specifier (122)
        on left: 115 116 117 118 119
        on right: 110
    enumerator_list (123)
        on left: 120 121
        on right: 115 116 117 118 121
    enumerator (124)
        on left: 122 123
        on right: 120 121
    type_qualifier (125)
        on left: 124 125 126
        on right: 86 87 113 114 146 147
    function_specifier (126)
        on left: 127
        on right: 88 89
    declarator (127)
        on left: 128 129
        on right: 92 93 131 152 204 205
    direct_declarator (128)
        on left: 130 131 132 133 134 135 136 137
        on right: 128 129 132 133 134 135 136 137
    identifier_list_opt (129)
        on left: 138 139
        on right: 136
    type_qualifier_list_opt (130)
        on left: 140 141
        on right: 132 133 134 144 145
    assignment_expression_opt (131)
        on left: 142 143
        on right: 132
    pointer (132)
        on left: 144 145
        on right: 128 145
    type_qualifier_list (133)
        on left: 146 147
        on right: 137 141 147
    parameter_type_list (134)
        on left: 148 149
        on right: 135
    parameter_list (135)
        on left: 150 151
        on right: 148 149 151
    parameter_declaration (136)
        on left: 152 153
        on right: 150 151
    identifier_list (137)
        on left: 154 155
        on right: 139 155
    type_name (138)
        on left: 156
        on right: 16 17 25 33
    initializer (139)
        on left: 157 158 159
        on right: 93 160 161
    initializer_list (140)
        on left: 160 161
        on right: 16 17 158 159 161
    designation_opt (141)
        on left: 162 163
        on right: 160 161
    designation (142)
        on left: 164
        on right: 163
    designator_list (143)
        on left: 165 166
        on right: 164 166
    designator (144)
        on left: 167 168
        on right: 165 166
    statement (145)
        on left: 169 170 171 172 173 174
        on right: 175 176 177 183 186 187 188 189 190 191 192
    labeled_statement (146)
        on left: 175 176 177
        on right: 169
    compound_statement (147)
        on left: 178 179
        on right: 170 204 205
    block_item_list (148)
        on left: 180 181
        on right: 179 181
    block_item (149)
        on left: 182 183
        on right: 180 181
    expression_statement (150)
        on left: 184 185
        on right: 171
    selection_statement (151)
        on left: 186 187 188
        on right: 172
    iteration_statement (152)
        on left: 189 190 191 192
        on right: 173
    expression_opt (153)
        on left: 193 194
        on right: 191 192
    jump_statement (154)
        on left: 195 196 197 198 199
        on right: 174
    translation_unit (155)
        on left: 200 201
        on right: 0 201
    external_declaration (156)
        on left: 202 203
        on right: 200 201
    function_definition (157)
        on left: 204 205
        on right: 202
    declaration_list (158)
        on left: 206 207
        on right: 204 207


State 0

    0 $accept: . translation_unit $end

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    REGISTER   shift, and go to state 7
    FLOAT      shift, and go to state 8
    INLINE     shift, and go to state 9
    INT        shift, and go to state 10
    LONG       shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    translation_unit         go to state 29
    external_declaration     go to state 30
    function_definition      go to state 31


State 1

   96 storage_class_specifier: AUTO .

    $default  reduce using rule 96 (storage_class_specifier)


State 2

   99 type_specifier: CHAR .

    $default  reduce using rule 99 (type_specifier)


State 3

  124 type_qualifier: CONST .

    $default  reduce using rule 124 (type_qualifier)


State 4

  104 type_specifier: DOUBLE .

    $default  reduce using rule 104 (type_specifier)


State 5

  115 enum_specifier: ENUM . OPENCURLYB enumerator_list CLOSECURLYB
  116               | ENUM . IDENTIFIER OPENCURLYB enumerator_list CLOSECURLYB
  117               | ENUM . OPENCURLYB enumerator_list COMMA CLOSECURLYB
  118               | ENUM . IDENTIFIER OPENCURLYB enumerator_list COMMA CLOSECURLYB
  119               | ENUM . IDENTIFIER

    OPENCURLYB  shift, and go to state 32
    IDENTIFIER  shift, and go to state 33


State 6

   94 storage_class_specifier: EXTERN .

    $default  reduce using rule 94 (storage_class_specifier)


State 7

   97 storage_class_specifier: REGISTER .

    $default  reduce using rule 97 (storage_class_specifier)


State 8

  103 type_specifier: FLOAT .

    $default  reduce using rule 103 (type_specifier)


State 9

  127 function_specifier: INLINE .

    $default  reduce using rule 127 (function_specifier)


State 10

  101 type_specifier: INT .

    $default  reduce using rule 101 (type_specifier)


State 11

  102 type_specifier: LONG .

    $default  reduce using rule 102 (type_specifier)


State 12

  126 type_qualifier: RESTRICT .

    $default  reduce using rule 126 (type_qualifier)


State 13

  100 type_specifier: SHORT .

    $default  reduce using rule 100 (type_specifier)


State 14

  105 type_specifier: SIGNED .

    $default  reduce using rule 105 (type_specifier)


State 15

   95 storage_class_specifier: STATIC .

    $default  reduce using rule 95 (storage_class_specifier)


State 16

  106 type_specifier: UNSIGNED .

    $default  reduce using rule 106 (type_specifier)


State 17

   98 type_specifier: VOID .

    $default  reduce using rule 98 (type_specifier)


State 18

  125 type_qualifier: VOLATILE .

    $default  reduce using rule 125 (type_qualifier)


State 19

  107 type_specifier: BOOL .

    $default  reduce using rule 107 (type_specifier)


State 20

  108 type_specifier: COMPLEX .

    $default  reduce using rule 108 (type_specifier)


State 21

  109 type_specifier: IMAGINARY .

    $default  reduce using rule 109 (type_specifier)


State 22

  203 external_declaration: declaration .

    $default  reduce using rule 203 (external_declaration)


State 23

   80 declaration: declaration_specifiers . SEMICOLON
   81            | declaration_specifiers . init_declarator_list SEMICOLON
  204 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  205                    | declaration_specifiers . declarator compound_statement

    OPENROUNDB  shift, and go to state 34
    STAR        shift, and go to state 35
    SEMICOLON   shift, and go to state 36
    IDENTIFIER  shift, and go to state 37

    init_declarator_list  go to state 38
    init_declarator       go to state 39
    declarator            go to state 40
    direct_declarator     go to state 41
    pointer               go to state 42


State 24

   82 declaration_specifiers: storage_class_specifier .
   83                       | storage_class_specifier . declaration_specifiers

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    REGISTER   shift, and go to state 7
    FLOAT      shift, and go to state 8
    INLINE     shift, and go to state 9
    INT        shift, and go to state 10
    LONG       shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 82 (declaration_specifiers)

    declaration_specifiers   go to state 43
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 25

   84 declaration_specifiers: type_specifier .
   85                       | type_specifier . declaration_specifiers

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    REGISTER   shift, and go to state 7
    FLOAT      shift, and go to state 8
    INLINE     shift, and go to state 9
    INT        shift, and go to state 10
    LONG       shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 84 (declaration_specifiers)

    declaration_specifiers   go to state 44
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 26

  110 type_specifier: enum_specifier .

    $default  reduce using rule 110 (type_specifier)


State 27

   86 declaration_specifiers: type_qualifier .
   87                       | type_qualifier . declaration_specifiers

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    REGISTER   shift, and go to state 7
    FLOAT      shift, and go to state 8
    INLINE     shift, and go to state 9
    INT        shift, and go to state 10
    LONG       shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 86 (declaration_specifiers)

    declaration_specifiers   go to state 45
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 28

   88 declaration_specifiers: function_specifier .
   89                       | function_specifier . declaration_specifiers

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    REGISTER   shift, and go to state 7
    FLOAT      shift, and go to state 8
    INLINE     shift, and go to state 9
    INT        shift, and go to state 10
    LONG       shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 88 (declaration_specifiers)

    declaration_specifiers   go to state 46
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 29

    0 $accept: translation_unit . $end
  201 translation_unit: translation_unit . external_declaration

    $end       shift, and go to state 47
    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    REGISTER   shift, and go to state 7
    FLOAT      shift, and go to state 8
    INLINE     shift, and go to state 9
    INT        shift, and go to state 10
    LONG       shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    external_declaration     go to state 48
    function_definition      go to state 31


State 30

  200 translation_unit: external_declaration .

    $default  reduce using rule 200 (translation_unit)


State 31

  202 external_declaration: function_definition .

    $default  reduce using rule 202 (external_declaration)


State 32

  115 enum_specifier: ENUM OPENCURLYB . enumerator_list CLOSECURLYB
  117               | ENUM OPENCURLYB . enumerator_list COMMA CLOSECURLYB

    IDENTIFIER  shift, and go to state 49

    enumerator_list  go to state 50
    enumerator       go to state 51


State 33

  116 enum_specifier: ENUM IDENTIFIER . OPENCURLYB enumerator_list CLOSECURLYB
  118               | ENUM IDENTIFIER . OPENCURLYB enumerator_list COMMA CLOSECURLYB
  119               | ENUM IDENTIFIER .

    OPENCURLYB  shift, and go to state 52

    $default  reduce using rule 119 (enum_specifier)


State 34

  131 direct_declarator: OPENROUNDB . declarator CLOSEROUNDB

    OPENROUNDB  shift, and go to state 34
    STAR        shift, and go to state 35
    IDENTIFIER  shift, and go to state 37

    declarator         go to state 53
    direct_declarator  go to state 41
    pointer            go to state 42


State 35

  144 pointer: STAR . type_qualifier_list_opt
  145        | STAR . type_qualifier_list_opt pointer

    CONST     shift, and go to state 3
    RESTRICT  shift, and go to state 12
    VOLATILE  shift, and go to state 18

    $default  reduce using rule 140 (type_qualifier_list_opt)

    type_qualifier           go to state 54
    type_qualifier_list_opt  go to state 55
    type_qualifier_list      go to state 56


State 36

   80 declaration: declaration_specifiers SEMICOLON .

    $default  reduce using rule 80 (declaration)


State 37

  130 direct_declarator: IDENTIFIER .

    $default  reduce using rule 130 (direct_declarator)


State 38

   81 declaration: declaration_specifiers init_declarator_list . SEMICOLON
   91 init_declarator_list: init_declarator_list . COMMA init_declarator

    SEMICOLON  shift, and go to state 57
    COMMA      shift, and go to state 58


State 39

   90 init_declarator_list: init_declarator .

    $default  reduce using rule 90 (init_declarator_list)


State 40

   92 init_declarator: declarator .
   93                | declarator . ASSIGN initializer
  204 function_definition: declaration_specifiers declarator . declaration_list compound_statement
  205                    | declaration_specifiers declarator . compound_statement

    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    REGISTER    shift, and go to state 7
    FLOAT       shift, and go to state 8
    INLINE      shift, and go to state 9
    INT         shift, and go to state 10
    LONG        shift, and go to state 11
    RESTRICT    shift, and go to state 12
    SHORT       shift, and go to state 13
    SIGNED      shift, and go to state 14
    STATIC      shift, and go to state 15
    UNSIGNED    shift, and go to state 16
    VOID        shift, and go to state 17
    VOLATILE    shift, and go to state 18
    BOOL        shift, and go to state 19
    COMPLEX     shift, and go to state 20
    IMAGINARY   shift, and go to state 21
    OPENCURLYB  shift, and go to state 59
    ASSIGN      shift, and go to state 60

    $default  reduce using rule 92 (init_declarator)

    declaration              go to state 61
    declaration_specifiers   go to state 62
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    compound_statement       go to state 63
    declaration_list         go to state 64


State 41

  129 declarator: direct_declarator .
  132 direct_declarator: direct_declarator . OPENSQUAREB type_qualifier_list_opt assignment_expression_opt CLOSESQUAREB
  133                  | direct_declarator . OPENSQUAREB STATIC type_qualifier_list_opt assignment_expression CLOSESQUAREB
  134                  | direct_declarator . OPENSQUAREB type_qualifier_list_opt STAR CLOSESQUAREB
  135                  | direct_declarator . OPENROUNDB parameter_type_list CLOSEROUNDB
  136                  | direct_declarator . OPENROUNDB identifier_list_opt CLOSEROUNDB
  137                  | direct_declarator . OPENSQUAREB type_qualifier_list STATIC assignment_expression CLOSESQUAREB

    OPENSQUAREB  shift, and go to state 65
    OPENROUNDB   shift, and go to state 66

    $default  reduce using rule 129 (declarator)


State 42

  128 declarator: pointer . direct_declarator

    OPENROUNDB  shift, and go to state 34
    IDENTIFIER  shift, and go to state 37

    direct_declarator  go to state 67


State 43

   83 declaration_specifiers: storage_class_specifier declaration_specifiers .

    $default  reduce using rule 83 (declaration_specifiers)


State 44

   85 declaration_specifiers: type_specifier declaration_specifiers .

    $default  reduce using rule 85 (declaration_specifiers)


State 45

   87 declaration_specifiers: type_qualifier declaration_specifiers .

    $default  reduce using rule 87 (declaration_specifiers)


State 46

   89 declaration_specifiers: function_specifier declaration_specifiers .

    $default  reduce using rule 89 (declaration_specifiers)


State 47

    0 $accept: translation_unit $end .

    $default  accept


State 48

  201 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 201 (translation_unit)


State 49

  122 enumerator: IDENTIFIER .
  123           | IDENTIFIER . ASSIGN constant_expression

    ASSIGN  shift, and go to state 68

    $default  reduce using rule 122 (enumerator)


State 50

  115 enum_specifier: ENUM OPENCURLYB enumerator_list . CLOSECURLYB
  117               | ENUM OPENCURLYB enumerator_list . COMMA CLOSECURLYB
  121 enumerator_list: enumerator_list . COMMA enumerator

    CLOSECURLYB  shift, and go to state 69
    COMMA        shift, and go to state 70


State 51

  120 enumerator_list: enumerator .

    $default  reduce using rule 120 (enumerator_list)


State 52
